@@ -1,3 +1,10 @@
+2023-12-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/gen.c:
+	  Fix bug #3681.
+	* src/z80/peeph.def:
+	  Whitespace fix.
+
 2023-12-17 Gabriele Gorla <gorlik@yahoo.com>
 
   	* src/mos6502/main.c
